--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "ant-design-vue": "^4.2.3",
     "eslint": "^9.8.0",
+    "lodash-es": "^4.17.21",
+    "uuid": "^10.0.0",
     "vue": "^3.4.31",
     "vue-router": "^4.4.2",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.1.0",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "typescript": "^5.2.2",
     "unplugin-vue-components": "^0.27.3",
