--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "devDependencies": {
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.1.0",
+    "@types/react": "^18.3.3",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vitejs/plugin-vue-jsx": "^4.0.1",
+    "@vue/runtime-core": "^3.4.38",
     "typescript": "^5.2.2",
     "unplugin-vue-components": "^0.27.3",
     "vite": "^5.3.4",
