--- a/package.json
+++ b/package.json
@@ -9,22 +9,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/rgb-hex": "^3.0.0",
     "ant-design-vue": "^4.2.3",
+    "babel-eslint": "^10.1.0",
     "eslint": "^9.8.0",
     "lodash-es": "^4.17.21",
     "uuid": "^10.0.0",
     "vue": "^3.4.31",
+    "vue-eslint-parser": "^9.4.3",
     "vue-router": "^4.4.2",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.1.0",
     "@types/react": "^18.3.3",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "@vue/runtime-core": "^3.4.38",
+    "@vue/test-utils": "^2.4.6",
+    "eslint-plugin-vue": "^9.27.0",
+    "jest": "^29.7.0",
+    "rgb-hex": "^4.1.0",
     "typescript": "^5.2.2",
     "unplugin-vue-components": "^0.27.3",
     "vite": "^5.3.4",
